--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,9 @@
 
 body {
-  /* width: 100%;
-  height:100vh;
-  text-align: center; */
   background-color: #1d1d1d;
   background-image: url("data:image/svg+xml,%3Csvg width='52' height='52' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23b1b1b1' fill-opacity='0.13' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
+
 
 #game-name {
   font-family: 'Press Start 2P', cursive;
@@ -26,7 +24,7 @@ body {
 #highscore {
   font-family: 'Press Start 2P', cursive;
   font-size: 2rem;
-  margin:  5% auto 0;
+  margin:  2% auto 0;
   color: #FEF2BF;
 }
 
@@ -36,7 +34,6 @@ body {
   display: inline-block;
   height: 200px;
   width: 200px;
- /*  max-width: 35vw; */
   border: 10px solid black;
   border-radius: 20%;
 }
@@ -47,13 +44,13 @@ body {
 
 .fa-btn {
   position: absolute;
-  background-color: transparent; /* Blue background */
-  border: none; /* Remove borders */
+  background-color: transparent; 
+  border: none; 
   width: 30px;
   height: 30px;
-  color: #FEF2BF; /* White text */
-  font-size: 30px; /* Set a font size */
-  cursor: pointer; /* Mouse pointer on hover */
+  color: #FEF2BF; 
+  font-size: 30px; 
+  cursor: pointer; 
 }
 
 .faIcon {
@@ -65,7 +62,7 @@ body {
 .game-btn {
   font-family: 'Press Start 2P', cursive;
   font-size: 2rem;
-  margin: 20px auto ;
+  margin: 20px auto;
 }
 
 .game-icon {
@@ -101,46 +98,55 @@ body {
   background-color: grey;
 }
 
-@media screen and (max-width: 500px) {
+
+
+@media screen and (max-height: 1000px) {
   .button {
-    margin: 5px;
-    display: inline-block;
-    height: 115px;
-    width: 115px;
-    border: 5px solid black;
-    border-radius: 20%;
+    height: 150px;
+    width: 150px;
+ 
   }
 
   #level-title {
-    font-family: 'Press Start 2P', cursive;
-    text-align: center;
-    font-size: 1.5rem;
-    margin:  15% 0 7%;
-    color: #FEF2BF;
+    font-size: 2rem;
+    margin-bottom: 2%;
   }
   
   #highscore {
-    font-family: 'Press Start 2P', cursive;
-    font-size: 1.5rem;
-    margin:  5% auto;
-    color: #FEF2BF;
-  }
-
-  .fa-btn {
-    position: absolute;
-    background-color: transparent; /* Blue background */
-    border: none; /* Remove borders */
-    width: 20px;
-    height: 20px;
-    color: #FEF2BF; /* White text */
-    font-size: 20px; /* Set a font size */
-    cursor: pointer; /* Mouse pointer on hover */
+    font-size: 2em;
+    margin: 1% auto;
   }
 
   .game-btn {
-    font-family: 'Press Start 2P', cursive;
+    margin: 10px auto;
+  }
+}
+
+
+@media screen and (max-width: 500px) {
+  .button {
+    height: 115px;
+    width: 115px;
+  }
+
+  #level-title {
     font-size: 1.5rem;
-    margin: 20px auto ;
+    margin: 15% 0 7%;
+  }
+  
+  #highscore {
+    font-size: 1.5rem;
+    margin: 5% auto;
+  }
+
+  .fa-btn {
+    width: 20px;
+    height: 20px;
+    font-size: 20px; 
+  }
+
+  .game-btn {
+    font-size: 1.5rem;
   }
   
   .game-icon {
