--- a/public/styles.css
+++ b/public/styles.css
@@ -4,11 +4,10 @@ body {
   background-image: url("data:image/svg+xml,%3Csvg width='52' height='52' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23b1b1b1' fill-opacity='0.13' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
-
 h1 {
   font-family: 'Press Start 2P', cursive;
   text-align: center;
-  margin-top: 4%;
+  margin-top: 3%;
   font-size: 3rem;
   color: #7000f0;
 }
@@ -21,17 +20,16 @@ h1 {
   color: #bdbdbd;
 }
 
+.info {
+  margin: 5px auto 0;
+  text-align: center;
+}
+
 #highscore {
   font-family: 'Press Start 2P', cursive;
   font-size: 2rem;
   margin: 2% auto 0;
   color: #7000f0;
-}
-
-.info {
-  margin: 5px auto 0;
-  text-align: center;
-  
 }
 
 .fa-btn {
@@ -70,13 +68,6 @@ h1 {
   margin: auto;
 }
 
-.game-btn {
-  font-family: 'Press Start 2P', cursive;
-  font-size: 2rem;
-  margin: 20px auto;
-  color: #e4e4e4;
-}
-
 .red {
   background-color: red;
 }
@@ -93,10 +84,6 @@ h1 {
   background-color: yellow;
 }
 
-.game-icon {
-  font-size: 2.5rem
-}
-
 .game-over {
   background-color: red;
   opacity: 0.8;
@@ -105,6 +92,17 @@ h1 {
 .pressed {
   box-shadow: 0 0 20px white;
   background-color: grey;
+}
+
+.game-btn {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 2rem;
+  margin: 20px auto;
+  color: #e4e4e4;
+}
+
+.game-icon {
+  font-size: 2.5rem
 }
 
   /* Footer Styles */
@@ -122,6 +120,7 @@ h1 {
     color: #bdbdbd; 
   }
 
+  /* MEDIA QUERIES */
   @media screen and (min-height: 1081px) and (orientation: landscape) {
     h1 {
       font-size: 4rem;
