--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,12 @@
-
 body {
+  width: 100%;
+  height: 100%;
+  
   background-color: #1d1d1d;
   background-image: url("data:image/svg+xml,%3Csvg width='52' height='52' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23b1b1b1' fill-opacity='0.13' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
-h1 {
+.simon-div h1 {
   font-family: 'Press Start 2P', cursive;
   text-align: center;
   margin-top: 3%;
@@ -14,6 +16,7 @@ h1 {
 
 .simon-content {
   height: 97vh;
+  min-height: 525px;
   width: 100vw; 
 }
 
@@ -25,7 +28,7 @@ h1 {
   color: #bdbdbd;
 }
 
-.info {
+.simon-div .info {
   margin: 5px auto 0;
   text-align: center;
 }
@@ -37,7 +40,7 @@ h1 {
   color: #7000f0;
 }
 
-.fa-btn {
+.simon-div .fa-btn {
   position: relative;
   background-color: transparent; 
   border: none; 
@@ -48,7 +51,7 @@ h1 {
   cursor: pointer; 
 }
 
-.faIcon {
+.simon-div .faIcon {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -67,7 +70,7 @@ h1 {
   bottom:5%;
 }
 
-.button {
+.simon-div .button {
   height: 40%;
   width: 40%;
   border: 5px solid; 
@@ -76,7 +79,7 @@ h1 {
   margin: auto;
 }
 
-[type=button] {
+.simon-div [type=button] {
   -webkit-appearance: initial;
 }
 
@@ -117,79 +120,107 @@ h1 {
   font-size: 2.5rem
 }
 
+
 /* Footer Styles */
 .simon-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   bottom: 0;
   left: 0;
-  height: 3vh;
   width: 100%;
   margin: 1% auto;
   text-align: center; 
 }
 
-#copyright {
+.simon-footer a {
+  color: #7000f0;
+}
+
+.simon-footer a:hover {
+  color: #a067e2;
+}
+
+.simon-div #copyright {
+  margin: 0 5px;
   font-size: 1rem;
   color: #bdbdbd; 
 }
 
 /* MEDIA QUERIES */
 @media screen and (min-height: 1081px) and (orientation: landscape) {
-  h1 {
+  .simon-div h1 {
     font-size: 3.5rem;
   }
 
-  .game-btn, #highscore, #level-title, .info, .game-icon, .faIcon {
+  .game-btn, #highscore, #level-title, .simon-div .info, .game-icon, .simon-div .faIcon {
     font-size: 2rem;
   }
 }
 
 @media screen and (min-height: 1441px) and (orientation: landscape) {
-  h1 {
+  .simon-div h1 {
     font-size: 4.5rem;
   }
   
-  .game-btn, #highscore, #level-title, .info, .game-icon, .faIcon {
+  .game-btn, #highscore, #level-title, .simon-div .info, .game-icon, .simon-div .faIcon {
     font-size: 3rem;
   }
 }
 
 
 @media screen and (max-height: 1080px) and (orientation: landscape) {
-  h1 {
+  .simon-div h1 {
     font-size: 2rem;
   }
   
-  .game-btn, #highscore, #level-title, .info, .game-icon, .faIcon {
+  .game-btn, #highscore, #level-title, .simon-div .info, .game-icon, .simon-div .faIcon {
     font-size: 1.2rem;
   }
 }
 
 @media screen and (max-height: 840px) and (orientation: portrait) {
-  h1 {
+  .simon-div h1 {
     font-size: 2rem;
   }
   
-  .game-btn, #highscore, #level-title, .info, .game-icon, .faIcon {
+  .game-btn, #highscore, #level-title, .simon-div .info, .game-icon, .simon-div .faIcon {
     font-size: 1rem;
   }
 }
 
-@media screen and (max-width: 350px) and (orientation: portrait) {
-  h1 {
-    font-size: 1.5rem;
+@media screen and (max-width: 500px) {
+  .simon-div #copyright, .simon-footer a {
+    font-size: 0.7rem;
   }
-  
-  .game-btn, #highscore, #level-title, .info, .game-icon, .faIcon {
+
+  .modal h4 {
+    font-size: 1rem;
+    font-weight: bold;
+  }
+
+  .modal p {
     font-size: 0.8rem;
   }
 
-  .button {
+  .modal-footer {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 350px) and (orientation: portrait) {
+  .simon-div h1 {
+    font-size: 1.5rem;
+  }
+  
+  .game-btn, #highscore, #level-title, .simon-div .info, .game-icon, .simon-div .faIcon {
+    font-size: 0.8rem;
+  }
+
+  .simon-div .button {
     border: 3px solid;
     border-color:rgba(68, 68, 68, 0.6);
   }
 
-  #copyright {
-    font-size: 0.7rem;
-  }
 }
